--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Türkisch — Portal & Benita (Drag&Drop Fix)</title>
+  <title>Türkisch — Portal & Benita (Drag&Drop + Touch-Fallback)</title>
   <style>
-    :root{--bg:#f6fbfc;--card:#ffffff;--muted:#6b7280;--accent:#0ea5a4}
-    html,body{height:100%}
+    :root{--bg:#f6fbfc;--card:#fff;--muted:#6b7280;--accent:#0ea5a4}
     body{font-family:Inter,system-ui,Arial;margin:0;background:var(--bg);color:#111;padding:18px}
     .wrap{max-width:1100px;margin:0 auto}
     .card{background:var(--card);padding:16px;border-radius:12px;box-shadow:0 8px 30px rgba(15,23,42,0.06)}
     header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:14px}
     h1{font-size:20px;margin:0}
-    .controls{display:flex;gap:8px;flex-wrap:wrap}
     button{padding:8px 12px;border-radius:10px;border:1px solid #e6eef0;background:#f3f6f7;cursor:pointer}
     .btnPrimary{background:var(--accent);color:white;border:none}
-    .btnDanger{background:#fee2e2;color:#7f1d1d;border:none}
-    input,textarea,select{padding:8px;border-radius:10px;border:1px solid #e6eef0;width:100%;box-sizing:border-box}
+    input,textarea{padding:8px;border-radius:10px;border:1px solid #e6eef0;width:100%;box-sizing:border-box}
     .grid2{display:grid;grid-template-columns:1fr 1fr;gap:10px}
     ul{padding-left:18px;margin:0}
     .muted{color:var(--muted);font-size:13px}
-    .chip{padding:6px 10px;border-radius:20px;background:#eef2ff;cursor:grab;border:1px solid #dbeafe;user-select:none}
+    .chip{padding:6px 12px;border-radius:20px;background:#eef2ff;cursor:grab;border:1px solid #dbeafe;user-select:none;display:inline-block}
+    .chip.selected{outline:2px solid #0ea5a4; box-shadow:0 2px 8px rgba(14,165,164,0.12)}
+    .blank{display:inline-block;min-width:140px;min-height:36px;padding:8px;margin-right:6px;margin-bottom:6px;border:1px solid #ccc;border-radius:8px;background:#fff;vertical-align:middle}
+    .blank.hover{border-color:#0ea5a4;background:#f0fdfa}
+    .blank.filled{background:#eef6f2}
     .listItem{padding:10px;border-radius:8px;border:1px solid #eef2f6;display:flex;justify-content:space-between;align-items:center}
-    .small{font-size:13px}
     @media(max-width:820px){ .grid2{grid-template-columns:1fr} header{flex-direction:column;align-items:flex-start} }
   </style>
 </head>
@@ -36,7 +36,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-  const { useState, useEffect, useRef } = React;
+  const { useState, useEffect } = React;
 
   function App(){
     const UNITS_KEY = "tl_units_v2_dd";
@@ -50,17 +50,23 @@
     const [gate, setGate] = useState("lock"); // lock | portal | student
     const [message, setMessage] = useState("");
 
+    // editor
     const [editorUnitName, setEditorUnitName] = useState("Einheit 1");
     const [editorWords, setEditorWords] = useState([]); // [{t,g}]
     const [editorTurkish, setEditorTurkish] = useState("");
     const [editorGerman, setEditorGerman] = useState("");
     const [editorLueckentext, setEditorLueckentext] = useState("");
-    const [editorBlanks, setEditorBlanks] = useState({});
+    const [editorBlanks, setEditorBlanks] = useState({}); // {1: 'merhaba'}
 
+    // student
     const [currentUnitId, setCurrentUnitId] = useState(null);
     const [placements, setPlacements] = useState({}); // {blankId: word}
     const [celebrate, setCelebrate] = useState(false);
 
+    // selection for touch/click fallback
+    const [selectedChip, setSelectedChip] = useState(null); // string of the chosen word
+
+    // heart scale
     const [heartScale, setHeartScale] = useState(() => {
       const v = parseFloat(localStorage.getItem(HEART_KEY));
       return isNaN(v) ? 0.12 : v;
@@ -69,10 +75,11 @@
     useEffect(()=>{ localStorage.setItem(UNITS_KEY, JSON.stringify(units)); }, [units]);
     useEffect(()=>{ localStorage.setItem(HEART_KEY, String(heartScale)); }, [heartScale]);
 
+    // helpers
     function shuffle(a){ return a.slice().sort(()=>Math.random()-0.5); }
     function nextBlankIndex(map){ const keys = Object.keys(map).map(Number); return keys.length ? Math.max(...keys)+1 : 1; }
 
-    // --- Login ---
+    // login
     function submitName(e){
       e && e.preventDefault();
       const name = (nameInput||"").trim();
@@ -101,10 +108,10 @@
     }
 
     function logout(){
-      setNameInput(""); setGate("lock"); setMessage(""); setCurrentUnitId(null); setCelebrate(false); setPlacements({});
+      setNameInput(""); setGate("lock"); setMessage(""); setCurrentUnitId(null); setCelebrate(false); setPlacements({}); setSelectedChip(null);
     }
 
-    // --- Portal actions ---
+    // editor actions
     function editorAddWord(){
       const t = (editorTurkish||"").trim(), g = (editorGerman||"").trim();
       if(!t || !g) return;
@@ -157,28 +164,17 @@
       setEditorLueckentext(text); setEditorBlanks(mapping);
     }
 
-    // --- Drag & Drop robust handlers ---
+    // drag handlers (robust) + touch/click fallback
     function onDragStart(ev, word){
-      // make sure dataTransfer is set and effect allowed
       try {
         ev.dataTransfer.setData('text/plain', word);
         ev.dataTransfer.effectAllowed = 'move';
-        // optional nicer drag image (use element clone)
-        if (ev.currentTarget && ev.dataTransfer.setDragImage) {
-          try {
-            // small invisible canvas to avoid default ghost
-            const crt = ev.currentTarget.cloneNode(true);
-            crt.style.position = 'absolute';
-            crt.style.top = '-9999px';
-            crt.style.left = '-9999px';
-            document.body.appendChild(crt);
-            ev.dataTransfer.setDragImage(crt, 0, 0);
-            setTimeout(()=>document.body.removeChild(crt), 0);
-          } catch (_) {}
-        }
-      } catch (err) {
-        // ignore
-      }
+      } catch(e){}
+      // clear selection when starting drag
+      setSelectedChip(null);
+    }
+    function onDragEnd(ev){
+      // cleanup if needed
     }
     function onAllowDrop(ev){
       ev.preventDefault();
@@ -187,11 +183,26 @@
     function onDropBlank(ev, blankId){
       ev.preventDefault();
       const word = ev.dataTransfer.getData('text/plain') || ev.dataTransfer.getData('Text') || '';
-      if(!word) return;
-      setPlacements(p => ({ ...p, [blankId]: word }));
+      if(word){
+        setPlacements(p => ({ ...p, [blankId]: word }));
+        setSelectedChip(null);
+      }
     }
 
-    // --- Student check ---
+    // click/touch fallback:
+    // tap a chip => selects it (highlight). tap a blank => places it there.
+    function chipSelect(word){
+      // if same chip tapped twice => deselect
+      setSelectedChip(s => s === word ? null : word);
+    }
+    function blankClickPlace(blankId){
+      if(!selectedChip) return; // nothing selected
+      setPlacements(p => ({ ...p, [blankId]: selectedChip }));
+      // optionally deselect after placing:
+      setSelectedChip(null);
+    }
+
+    // student check
     function studentCheck(){
       const unit = units.find(u=>u.id===currentUnitId) || units.filter(u=>u.published)[0];
       if(!unit) return alert('Keine Einheit geladen.');
@@ -212,6 +223,7 @@
       }
     }
 
+    // export/import helpers
     function exportUnits(){
       const payload = JSON.stringify(units, null, 2);
       const blob = new Blob([payload],{type:'application/json'}); const url = URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='units.json'; a.click(); URL.revokeObjectURL(url);
@@ -221,7 +233,7 @@
       const r = new FileReader(); r.onload = ev => { try { const data = JSON.parse(ev.target.result); if(Array.isArray(data)) setUnits(data); alert('Units importiert.'); } catch { alert('Fehler beim Einlesen.'); } }; r.readAsText(f);
     }
 
-    // --- UI render ---
+    // Render
     if(gate === "lock"){
       return (
         <div className="card" style={{maxWidth:960, margin:'18px auto'}}>
@@ -230,7 +242,6 @@
               <h1>Türkisch Lernplattform — Zugang</h1>
               <div className="muted small">Editor-Portal ist geheim — erreichbar über den Namen <strong>Tanzen</strong>.</div>
             </div>
-
             <div style={{display:'flex',flexDirection:'column',alignItems:'flex-end',gap:8}}>
               <div style={{transform:`scale(${heartScale})`,transformOrigin:'center',transition:'transform 300ms ease'}}><span style={{fontSize:36}}>❤️</span></div>
               <div style={{display:'flex',gap:8}}>
@@ -328,7 +339,7 @@
           <div style={{display:'flex',justifyContent:'space-between',alignItems:'center'}}>
             <div>
               <h1>Hallo Benita — deine heutige Einheit</h1>
-              <div className="muted small">Zieh die türkischen Wörter in die Lücken.</div>
+              <div className="muted small">Zieh die türkischen Wörter in die Lücken oder tippe ein Wort und dann eine Lücke (Touch-Fallback).</div>
             </div>
             <div style={{display:'flex',flexDirection:'column',alignItems:'flex-end',gap:8}}>
               <div style={{transform:`scale(${heartScale})`,transformOrigin:'center',transition:'transform 300ms ease'}}><span style={{fontSize:36}}>❤️</span></div>
@@ -366,11 +377,27 @@
                         const m = pc.match(/__\\[(\\d+)\\]__/);
                         if(m){
                           const id = m[1];
+                          const isFilled = !!placements[id];
+                          const isSelectedBlank = selectedChip !== null && !isFilled;
                           return (
                             <span key={idx}
                               onDrop={(e)=>onDropBlank(e,id)}
                               onDragOver={onAllowDrop}
-                              style={{display:'inline-block',minWidth:140,minHeight:36,padding:8,marginRight:6,marginBottom:6,border:'1px solid #ccc',borderRadius:8,background:'#fff',verticalAlign:'middle'}}>
+                              onClick={()=> blankClickPlace(id)}
+                              style={{
+                                display:'inline-block',
+                                minWidth:140,
+                                minHeight:36,
+                                padding:8,
+                                marginRight:6,
+                                marginBottom:6,
+                                border:'1px solid #ccc',
+                                borderRadius:8,
+                                background:isFilled? '#eef6f2' : (isSelectedBlank ? '#f0fdfa' : '#fff'),
+                                verticalAlign:'middle',
+                                cursor:'pointer'
+                              }}
+                            >
                               {placements[id] ? <strong>{placements[id]}</strong> : <em className="muted">[Zieh hier {id}]</em>}
                             </span>
                           );
@@ -380,24 +407,25 @@
                     </div>
 
                     <div style={{marginTop:12}}>
-                      <h5>Wort-Chips</h5>
+                      <h5>Wort-Chips (drag oder tippe → wähle)</h5>
                       <div style={{display:'flex',gap:8,flexWrap:'wrap'}}>
                         {shuffle(unit.words.map(w=>w.t)).map((word,i)=>(
                           <div key={i}
-                               className="chip"
+                               className={"chip " + (selectedChip === word ? 'selected' : '')}
                                draggable="true"
                                onDragStart={(e)=>onDragStart(e,word)}
-                               onTouchStart={(e)=>{ /* mobile fallback: copy to clipboard so user can long-press paste */ }}
-                               role="button"
-                               aria-grabbed="false"
+                               onDragEnd={(e)=>onDragEnd(e)}
+                               onClick={()=>chipSelect(word)}
                           >{word}</div>
                         ))}
+                        {/* clear selection button */}
+                        <button style={{marginLeft:6}} onClick={()=>setSelectedChip(null)}>Auswahl löschen</button>
                       </div>
                     </div>
 
                     <div style={{marginTop:12,display:'flex',gap:8}}>
                       <button className="btnPrimary" onClick={studentCheck}>Absenden</button>
-                      <button onClick={()=>setPlacements({})}>Zurücksetzen</button>
+                      <button onClick={()=>{ setPlacements({}); setSelectedChip(null); }}>Zurücksetzen</button>
                     </div>
                   </>
                 ) : <div className="muted">Kein Lückentext für diese Einheit vorhanden.</div>}
